--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>363</width>
-    <height>316</height>
+    <height>371</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -170,6 +170,45 @@
      </property>
      <property name="text">
       <string>Aktivieren</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>341</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Trigger</string>
+    </property>
+    <widget class="QSpinBox" name="spinBox_speed_3">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>0</y>
+       <width>61</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>255</number>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_trigger">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>0</y>
+       <width>97</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Senden</string>
      </property>
     </widget>
    </widget>
