--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>363</width>
-    <height>371</height>
+    <width>365</width>
+    <height>405</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -178,8 +178,8 @@
      <rect>
       <x>10</x>
       <y>210</y>
-      <width>341</width>
-      <height>81</height>
+      <width>331</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="title">
@@ -211,6 +211,71 @@
       <string>Senden</string>
      </property>
     </widget>
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>50</y>
+       <width>381</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Kuer</string>
+     </property>
+     <widget class="QPushButton" name="pushButton_changeStrip">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>30</y>
+        <width>99</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Change strip</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_junction_straight">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>0</y>
+        <width>71</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Straight</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_junction_left">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>30</y>
+        <width>61</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Left</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_junction_right">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>30</y>
+        <width>61</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Right</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -218,7 +283,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>363</width>
+     <width>365</width>
      <height>25</height>
     </rect>
    </property>
